[package]
name = "forgs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
keyring = "4.0.0"
keyring-core = "1.0.0"
octocrab = "0.49.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.1", features = ["full"] }
